# patient-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  run.py  test_requirements.txt
db/: __init__.py  database.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  ProtectedRoute.jsx  api.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: LoginPage.jsx  PatientsPage.jsx  ProfilePage.jsx  RegisterPage.jsx
models/: __init__.py  patients.py  users.py
routers/: __init__.py  auth.py  patients.py
schemas/: patients.py  users.py
services/: __init__.py  auth_service.py
tests/: README.md  conftest.py
tests/integration/: test_auth_router.py  test_patients_router.py
tests/unit/: test_auth_service.py  test_database.py  test_patient_model.py  test_user_model.py
